--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -5,7 +5,14 @@
 }
 
 body{
+    background-image: url("../img/mainBack.jpg");
+    width: 100%;
+    overflow-y:hidden;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
     font-family:'Montserrat',sans-serif;
+
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -18,6 +25,54 @@ h1{
     margin:0;
 }
 .container{
-    background-color: blue;
+    /* margin-left:6.5%;
+    margin-top:24%; */
+    background: rgba(0, 0, 0, 0.637); 
     border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    width:20%;
+    max-width: 100%;
+}
+.user-container h1 {
+    color: #eee;
+}
+.user-container{
+    opacity: 1.0;
+    display:flex;
+    flex-direction: column;
+    padding:50px 50px;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.user-container select {
+    background: #eee;
+    border:none;
+    padding: 12px 15px;
+    margin: 8px;
+    width: 100%;
+}
+.user-container input {
+    background: #eee;
+    border:none;
+    padding: 12px 15px;
+    margin: 8px;
+    width: 100%;
+}
+button{
+    border-radius:20px;
+    border: 1px solid;
+    font-size:12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+}
+button:active{
+    transform:scale(0.95);
+}
+button:focus{
+    outline: none;
 }
