--- a/views/index.html
+++ b/views/index.html
@@ -5,25 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="../public/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="form-container sign-in-container">
-            <form action="#">
-                <h1>Track Stats</h1>
-                <select class="select_platform">
-                    <option value="psn">Playstation</option>
-                    <option value="xbl">Xbox</option>
-                    <option value="origin">PC</option>
-                </select>
-                <input type="text" placeholder="Gamertag">
-                <button>Submit</button>
-            </form>
+        <div class="form-container user-container">
+            <h1>Track Stats</h1>
+            <select id="platformInput">
+                <option value="psn">Playstation</option>
+                <option value="xbl">Xbox</option>
+                <option value="origin">PC</option>
+            </select>
+            <input type="text" id="gamerTagInput" placeholder="Gamertag">
+            <button id="submitBtn">Submit</button>
         </div>
     </div>
+
+    <script>
+        const $ = id => document.getElementById(id),
+            submitBtn = $("submitBtn"),
+            platform = $("platformInput"),
+            gamerTag = $("gamerTagInput")
+
+
+        submitBtn.addEventListener('click', () => {
+            // console.log(gamerTag.value, platform.value)
+            // return res.redirect('../routes/profile.js')
+        })
+    </script>
 </body>
 
 </html>
