removed index routes

--- a/views/index.html
+++ b/views/index.html
@@ -58,7 +58,7 @@
                 'platform': platform.value
             }
             const jsonSt = JSON.stringify(data)
-            ajax_post('/handler', jsonSt)
+            ajax_post('/', jsonSt)
         })
     </script>
 </body>
