transition post data to routes profile

--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
                 <option value="xbl">Xbox</option>
                 <option value="origin">PC</option>
             </select>
-            <input type="text" id="gamerTagInput" placeholder="Gamertag">
+            <input type="text" id="gamerTagInput" placeholder="Gamertag" value="ShamR0cks978">
             <button id="submitBtn">Submit</button>
         </div>
     </div>
