--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -18,7 +18,7 @@ body{
     justify-content: center;
     align-items: center;
     height:100vh;
-    margin:-20px 0 50px;
+    margin:-1.25rem 0 3.125rem;
 }
 h1{
     font-weight:bold;
@@ -30,8 +30,8 @@ h1{
     background: rgba(0, 0, 0, 0.637); 
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    width:20%;
-    max-width: 100%;
+    max-width: 720px;
+    color:#fff;
 }
 .user-container h1 {
     color: #eee;
@@ -40,33 +40,28 @@ h1{
     opacity: 1.0;
     display:flex;
     flex-direction: column;
-    padding:50px 50px;
+    padding:3.125rem 3.125rem;
     height: 100%;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
-.user-container select {
+.user-container select, input {
     background: #eee;
     border:none;
-    padding: 12px 15px;
-    margin: 8px;
+    padding: 0.75rem 0.9375rem;
+    margin: 0.6rem;
     width: 100%;
+    
 }
-.user-container input {
-    background: #eee;
-    border:none;
-    padding: 12px 15px;
-    margin: 8px;
-    width: 100%;
-}
+
 button{
     border-radius:20px;
     border: 1px solid;
-    font-size:12px;
+    font-size:0.75rem;
     font-weight: bold;
-    padding: 12px 45px;
-    letter-spacing: 1px;
+    padding: 0.75rem 2.8125rem;
+    letter-spacing: 0.1rem;
     text-transform: uppercase;
     transition: transform 80ms ease-in;
 }
@@ -75,4 +70,41 @@ button:active{
 }
 button:focus{
     outline: none;
+}
+
+.userProfile{
+    font-size: 	1rem;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 0.4rem 0.5rem;
+    text-align: center;
+    border-radius: 20px;
+    margin-bottom: 3rem;
+    display: flex;
+    align-items: center;
+}
+
+.userProfile img{
+    margin-right:0.5rem;
+}
+.userProfile h1 span{
+    font-size:1rem;
+}
+.grid{
+    display:flex;
+}
+ul{
+    list-style:none;
+}
+li {
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+
+}
+li p {
+    font-size: 1.5rem;
+}
+li p span{
+    font-size:1rem;
 }
