--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -6,11 +6,10 @@
 
 body{
     background-image: url("../img/mainBack.jpg");
-    width: 100%;
-    overflow-y:hidden;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size:cover;
+    background-repeat:no-repeat;
+    background-size:100% 100%;
+    background-position:center;
+    overflow-y: hidden;
     font-family:'Montserrat',sans-serif;
 
     display:flex;
@@ -30,7 +29,7 @@ h1{
     background: rgba(0, 0, 0, 0.637); 
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    max-width: 720px;
+    max-width: 45rem;
     color:#fff;
 }
 .user-container h1 {
@@ -108,3 +107,32 @@ li p {
 li p span{
     font-size:1rem;
 }
+@media all and (max-width:900px) { 
+    body{
+        background-image: url("../img/mobileBack.jpg");
+   }
+
+   .container{
+        max-width: 30rem;
+
+   }
+   .userProfile{
+        font-size: 	0.75rem;
+
+   }
+   .grid div img{
+       width:11rem;
+       height:11rem;
+   }
+
+   li p {
+        font-size: 1rem;
+    }
+    li p span{
+        font-size:0.8rem;
+    }
+
+
+}
+
+
