fixed img src tag bug

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -10,13 +10,13 @@ head
     .user-container
         .userProfile
             //- var img = #{data.platformInfo.avatarUrl}
-            img(src='https://avatar-cdn.tracker.gg/api/avatar/2/ShamR0cks978.png' width="47" height = "47")
+            img(src=data.platformInfo.avatarUrl width="47" height = "47")
             h1 #{data.platformInfo.platformUserId} 
                 span (lvl #{data.segments[0].stats.level.displayValue})
 
         .grid
             div
-                img(src='https://media.contentapi.ea.com/content/dam/apex-legends/images/2019/01/legends-character-tiles/apex-grid-tile-legends-pathfinder.png.adapt.crop16x9.png' width="250" height = "250")
+                img(src=data.segments[1].metadata.imageUrl width="250" height = "250")
             div
                 ul
                     li 
@@ -37,9 +37,3 @@ head
                         h4 Damage Done
                         p #{data.segments[0].stats.damage.displayValue} 
                             span (#{data.segments[0].stats.damage.percentile}%)
-
-        
-
-script.
-    console.log(`#{data.platformInfo.avatarUrl}`)
-    console.log(`#{data.segments[1].metadata.imageUrl}`)
